<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14313.18" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="MRT-aT-6gf">
    <device id="retina4_7" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.14"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="TestPrueba" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="zpb-Uv-5aK">
                                <rect key="frame" x="85" y="180" width="204" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="txtUser1"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="fFh-YH-e0g">
                                <rect key="frame" x="85" y="252" width="204" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="txtPas"/>
                                <nil key="textColor"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" secureTextEntry="YES" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dAD-vM-s8f">
                                <rect key="frame" x="166.5" y="318" width="42" height="30"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <accessibility key="accessibilityConfiguration" identifier="btnLogin1"/>
                                <state key="normal" title="Log In"/>
                                <connections>
                                    <action selector="btnLogIn:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Yyj-hk-GcX"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="fFh-YH-e0g" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="Rub-q1-NNE"/>
                            <constraint firstItem="zpb-Uv-5aK" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="85" id="Xng-Vd-2Ek"/>
                            <constraint firstItem="zpb-Uv-5aK" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="116" id="enJ-ad-t5r"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="zpb-Uv-5aK" secondAttribute="trailing" constant="86" id="uWT-os-FMl"/>
                            <constraint firstItem="fFh-YH-e0g" firstAttribute="top" secondItem="zpb-Uv-5aK" secondAttribute="bottom" constant="42" id="y3U-Kk-dx8"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="fFh-YH-e0g" secondAttribute="trailing" constant="86" id="zl9-GP-DJE"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" id="bgf-J8-8Ba"/>
                    <connections>
                        <outlet property="txtPass" destination="fFh-YH-e0g" id="1Ty-v9-0ck"/>
                        <outlet property="txtUser" destination="zpb-Uv-5aK" id="5TU-Jz-bnr"/>
                        <segue destination="AWU-20-g2y" kind="show" identifier="loginSucees" id="c0c-5q-aqp"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="936.79999999999995" y="-564.46776611694156"/>
        </scene>
        <!--Music View Controller-->
        <scene sceneID="IOb-oX-aKd">
            <objects>
                <viewController id="AWU-20-g2y" customClass="MusicViewController" customModule="TestPrueba" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="gen-LA-XCa">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="99p-5N-q7Q">
                                <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="musicCell" id="IYq-94-jeJ">
                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="IYq-94-jeJ" id="FSu-ZI-U6u">
                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                        </tableViewCellContentView>
                                    </tableViewCell>
                                </prototypes>
                                <connections>
                                    <outlet property="dataSource" destination="AWU-20-g2y" id="ovw-KZ-XCU"/>
                                    <outlet property="delegate" destination="AWU-20-g2y" id="enp-lJ-zGX"/>
                                </connections>
                            </tableView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="MusicView"/>
                        <constraints>
                            <constraint firstItem="99p-5N-q7Q" firstAttribute="top" secondItem="yd8-9L-JNd" secondAttribute="top" id="NtU-Kv-OZ7"/>
                            <constraint firstItem="99p-5N-q7Q" firstAttribute="leading" secondItem="yd8-9L-JNd" secondAttribute="leading" id="Q5R-A2-bdO"/>
                            <constraint firstItem="yd8-9L-JNd" firstAttribute="bottom" secondItem="99p-5N-q7Q" secondAttribute="bottom" id="S8F-GJ-tzu"/>
                            <constraint firstItem="yd8-9L-JNd" firstAttribute="trailing" secondItem="99p-5N-q7Q" secondAttribute="trailing" id="uqa-AZ-E7V"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="yd8-9L-JNd"/>
                    </view>
                    <connections>
                        <outlet property="tableView" destination="99p-5N-q7Q" id="VE4-jp-brK"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="qa6-m0-ncW" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1748" y="-564"/>
        </scene>
        <!--Navigation Controller-->
        <scene sceneID="920-n8-ytw">
            <objects>
                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="MRT-aT-6gf" sceneMemberID="viewController">
                    <toolbarItems/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="l9J-5x-cmh">
                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
                    <nil name="viewControllers"/>
                    <connections>
                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="7OJ-9Q-Uuj"/>
                    </connections>
                </navigationController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="t7S-WH-iDW" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="72.799999999999997" y="-564.46776611694156"/>
        </scene>
    </scenes>
</document>
